# scop

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.zig  build.zig.zon  bullet.mtl  compile_flags.txt
assets/shader/: Quad.glsl
assets/textures/: checkerboard.tga  earth.tga  mage.tga  solidnoise.tga
include/: AudioPlayer.hpp  Face.hpp  ITexture.hpp  IndexBuffer.hpp  Matrix4.hpp  Model.hpp  Render.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VertexBuffer.hpp  Window.hpp  camera.hpp  colors.hpp  vector.hpp
include/app/: Application.hpp
include/math/: vector.hpp
include/renderer/: IRenderer.hpp
include/renderer/opengl/: RendererOpenGL.hpp  ShaderOpenGL.hpp  TextureOpenGL.hpp
model/: 42.mtl  revolver.mtl
models/: bullet.mtl  knight.mtl  knight.tga  lab.tga  moon.tga  revolver.mtl  sun.tga  test.tga
res/: Basic.glsl  Textured.glsl
src/: Face.cpp  IndexBuffer.cpp  Model.cpp  Render.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VertexBuffer.cpp  camera.cpp  main.cpp  vector.cpp
src/app/: Application.cpp  main.cpp
src/core/: AudioPlayer.cpp  Window.cpp
src/core/renderer/opengl/: IndexBuffer.cpp  RendererOpenGL.cpp  ShaderOpenGL.cpp  TextureOpenGL.cpp  VertexBuffer.cpp
src/math/: vector.cpp
